   can be translated to an actual diagonal.  This may improve some
   people's laptop playing experience without resorting to the
   roguelike keyset.
 * Add bigscreen support to the self-knowledge screen.
 * Make inscriptions like "!k!k!k" prompt multiple times again.  (#492)
 * Make monster XP and native depth always known, even without
   kills.  (#596)
 * Rejig social status a bit.

Gameplay changes
----------------

There are some pretty big gameplay changes.

The object list has been reworked quite a bit.  It is a bit more
varied and has less duplication.  Some items have been removed and
others added.  The new items have had relatively little testing and
may be gone again next release.
 - The number of items that monsters drop has been reduced drastically.
 - Potions tend to appear in stacks now.
 - The range of food items has been reduced.
 - Healing heal a proportion of wounds, not just a set value-- this
   makes all the potions useful.
 - Add a selection of "gain one, lose one" stat potions to replace the
   old stat loss potions-- they guarantee a stat to raise and reduce one
   randomly.
 - The Elven Rings have a variety of healings, at the suggestion of
   Timo.  Also, apply some other changes from the TV-patch (r428)
 - Replace the sustain {stat} rings with sustain mind and sustain body,
   providing three sustains each.
 - (#543) Make ammo of slay evil/venom apply to Mithril ammo too.

Gold drops have also been reworked.  By the end of the game, there is
about 3.6x less gold per drop than in any earlier version or Angband
or Moria, but the amount per drop at the beginning of the dungeon 
is quite similar to pre-existing levels.  You may be interested in
looking at http://rephial.org/research/avg_gold_drop.pdf for an
illustration.

Magic mapping and detection use the same-sized rectangular area around
the player regardless of screen size.

Birth:
 * Make point-based points worth less gold.
 * Minimum starting gold is 200AU.