@@ -348,6 +348,11 @@ extern void close_game(void);
 extern void exit_game_panic(void);
 
 /* generate.c */
+void place_object(int y, int x, int level, bool good, bool great);
+void place_gold(int y, int x, int level);
+void place_secret_door(int y, int x);
+void place_closed_door(int y, int x);
+void place_random_door(int y, int x);
 extern void generate_cave(void);
 
 /* history.c */
