@@ -114,11 +114,6 @@ void object_prep(object_type *o_ptr, int k_idx);
 s16b floor_carry(int y, int x, object_type *j_ptr);
 void drop_near(object_type *j_ptr, int chance, int y, int x);
 void acquirement(int y1, int x1, int level, int num, bool great);
-void place_object(int y, int x, int level, bool good, bool great);
-void place_gold(int y, int x, int level);
-void place_secret_door(int y, int x);
-void place_closed_door(int y, int x);
-void place_random_door(int y, int x);
 void inven_item_charges(int item);
 void inven_item_describe(int item);
 void inven_item_increase(int item, int num);
